retrieveUnpackaged/objects/ContractItem__c.object
<CustomObject>
    <fields>
        <fullName>BatchNumber__c</fullName>
        <description>Contract Item / VBAP-CHARG  /</description>
        <label>Batch Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChangeDate__c</fullName>
        <description>Contract Item / VBAP-AEDAT /</description>
        <label>Change Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ContractType__c</fullName>
        <formula>ServiceContract__r.ContractType__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreationDate__c</fullName>
        <description>Contract Item / VBAP-ERDAT /</description>
        <label>Creation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Currency__c</fullName>
        <formula>ServiceContract__r.Currency__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Currency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer__c</fullName>
        <description>/</description>
        <label>Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>R00NM0000000JtvaMAC</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Equipment__c</fullName>
        <label>Serial Number</label>
        <referenceTo>Equipment__c</referenceTo>
        <relationshipLabel>Contract Items</relationshipLabel>
        <relationshipName>ContractItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ExternalId__c</fullName>
        <description>/</description>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ItemCategoryDesc__c</fullName>
        <description>Contract Item /  / Description of Item Category</description>
        <label>Description of Item Category</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ItemCategory__c</fullName>
        <description>Contract Item / VBAP-PSTYV /</description>
        <label>Item Category</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ItemNetValue__c</fullName>
        <description>Contract Item / VBAP-NETWR /</description>
        <label>Item Net Value</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ItemNumber__c</fullName>
        <description>Contract Item / VBAP-POSNR /</description>
        <label>Item Number</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MaterialDesc__c</fullName>
        <description>Contract Item / VBAP-ARKTX /</description>
        <label>Material Description</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Material__c</fullName>
        <description>/</description>
        <label>Model Number</label>
        <referenceTo>Material__c</referenceTo>
        <relationshipLabel>Contract Items</relationshipLabel>
        <relationshipName>ContractItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Patient__c</fullName>
        <formula>ServiceContract__r.Patient__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Patient</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <description>Contract Item / VBAP-ZMENG   /</description>
        <label>Quantity</label>
        <precision>15</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SalesUnit__c</fullName>
        <description>Contract Item / VBAP-VRKME  /</description>
        <label>Sales Unit</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ServiceContract__c</fullName>
        <description>/</description>
        <label>Service Contract</label>
        <referenceTo>ServiceContract__c</referenceTo>
        <relationshipName>ContractItems</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ValidityEndDate__c</fullName>
        <description>Contract Item / VEDA-VENDDAT /</description>
        <label>Validity End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ValidityStartDate__c</fullName>
        <description>Contract Item / VEDA-VBEGDAT  /</description>
        <label>Validity Start Date</label>
        <type>Date</type>
    </fields>
    <label>Contract Item</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Contract Item Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contract Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>